# exchange-mail-cli-client

./: .env.sample  .gitignore  README  README.md  html_converter.py  pyproject.toml  requirements.txt
src/exchange-mail-cli-client/: mail_client.py
