[project]
name = "exchange-mail-cli-client"
version = "0.1.0"
description = "Python script for working with email via the Microsoft Graph API with OAuth authentication."
license = { text = "MIT" }
authors = [{ name = "DuskyDao", email = "git.duskydog.mane@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "dotenv (>=0.9.9,<0.10.0)",
    "msal (>=1.34.0,<2.0.0)",
]
packages = [{ include = "exchange_mail_cli_client", from = "src" }]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
